--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bower-requirejs": "~1.1.3",
     "grunt-bower-requirejs": "~2.0.0",
     "requirejs": "~2.1.18",
-    "grunt-contrib-copy": "~0.8.0"
+    "grunt-contrib-copy": "~0.8.0",
+    "grunt-babel": "~5.0.1"
   }
 }
