--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "require": {
         "php": ">=5.4.16",
         "cakephp/cakephp": "~3.0",
-        "voryx/thruway":"0.3.*"
+        "voryx/thruway":"0.3.*",
+        "firebase/php-jwt": "~2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "*"
