--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "firebase/php-jwt": "~2.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "*"
+        "phpunit/phpunit": "*",
+        "cakephp/cakephp-codesniffer": "2.*"
     },
     "autoload": {
         "psr-4": {
